PR3: Add more robust rate limit handling and other cleanup